--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -22,6 +22,8 @@
   <link rel="stylesheet" href="{% static 'css/ventana.css' %}">
   <link rel="stylesheet" href="{% static 'css/reparacion.css' %}">
   <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+  <link rel="stylesheet" href="{% static 'css/paginacion.css' %}">
+  <link rel="stylesheet" href="{% static 'css/tabla.css' %}">
 </head>
 
 <body>
