--- a/core/templates/cliente/cliente_list.html
+++ b/core/templates/cliente/cliente_list.html
@@ -4,66 +4,65 @@
 {% block content %}
 
 <div class="main-content">
-    <!-- Botón Agregar reparación -->
+    <!-- Botón Agregar cliente -->
     <div class="header-icons">
-      <a href="{% url 'cliente_create' %}" class="btn btn-add me-3"> Agregar Cliente</a>
+        <h2 class="titulo">CLIENTE</h2>
+        <a href="{% url 'cliente_create' %}" class="btn btn-add mb-3"> Agregar Cliente</a>
     </div>
 
 
 
-    <br>
-
-    <!-- Lista de reparaciones -->
+    <!-- Lista de clientes -->
     <div class="table-container">
-        <table class="table table-hover align-middle custom-table">
+        <table class="custom-table">
             <thead class="table-header">
                 <tr>
-                  <th>Nombre</th>
-                  <th>Apellido</th>
-                  <th>Teléfono</th>
-                  <th>Acciones</th>
+                    <th>Nombre</th>
+                    <th>Apellido</th>
+                    <th>Teléfono</th>
+                    <th></th>
                 </tr>
             </thead>
             <tbody>
                 {% for cliente in clientes %}
                 <tr>
-                  <td>{{ cliente.nombre }}</td>
-                  <td>{{ cliente.apellido }}</td>
-                  <td>{{ cliente.telefono }}</td>
+                    <td>{{ cliente.nombre }}</td>
+                    <td>{{ cliente.apellido }}</td>
+                    <td>{{ cliente.telefono }}</td>
                     <td>
                         <a href="" class="btn btn-sm btn-outline-primary" title="Editar cliente">
-                            <i class="bi bi-pencil-square"></i>
+                            <i class="bi bi-pencil"></i>
                         </a>
                     </td>
                 </tr>
                 {% endfor %}
             </tbody>
         </table>
-
+    
         <!-- Paginación -->
         {% if is_paginated %}
         <nav aria-label="Page navigation">
             <ul class="pagination">
-                {% if page_obj.has_previous %}
                 <li class="page-item">
-                    <a class="page-link" href="?page={{ page_obj.previous_page_number }}">Anterior</a>
+                    <a class="page-link" href="{% if page_obj.has_previous %}?page={{ page_obj.previous_page_number }} {% endif %}">
+                        <span aria-hidden="true">&laquo;</span>
+                    </a>
                 </li>
-                {% endif %}
-
+    
                 {% for num in page_obj.paginator.page_range %}
                 <li class="page-item {% if page_obj.number == num %}active{% endif %}">
                     <a class="page-link" href="?page={{ num }}">{{ num }}</a>
                 </li>
                 {% endfor %}
-
-                {% if page_obj.has_next %}
+    
                 <li class="page-item">
-                    <a class="page-link" href="?page={{ page_obj.next_page_number }}">Siguiente</a>
+                    <a class="page-link" href="{% if page_obj.has_next %} ?page={{ page_obj.next_page_number }} {% endif %}" aria-label="Next">
+                        <span aria-hidden="true">&raquo;</span>
+                    </a>
                 </li>
-                {% endif %}
             </ul>
         </nav>
         {% endif %}
-    </div>
+    </div>    
 </div>
 {% endblock %}
