--- a/core/templates/usuario/usuario_list.html
+++ b/core/templates/usuario/usuario_list.html
@@ -6,18 +6,19 @@
 <div class="main-content">
     <!-- Botón Agregar reparación -->
     <div class="header-icons">
+        <h2 class="titulo">USUARIOS</h2>
       <a href="{% url 'usuario_create' %}" class="btn btn-add me-3s"> Agregar Usuario</a>
     </div>
 
     <br>
 
-    <!-- Lista de reparaciones -->
-    <div class="table-container">
+    <!-- Lista de usuarios -->
+    <div class="table-container" id="tablaUsuario">
         <table class="table table-hover align-middle custom-table">
             <thead class="table-header">
                 <tr>
-                  <th>Usuario</th>
-              <th class="text-end">Acciones</th>
+                    <th class="text-center">Usuario</th>
+                    <th class="text-center">Acciones</th>
                 </tr>
             </thead>
             <tbody>
@@ -26,7 +27,7 @@
                   <td>{{ usuario.username }}</td>
                     <td>
                         <a href="" class="btn btn-sm btn-outline-primary" title="Editar usuario">
-                            <i class="bi bi-pencil-square"></i>
+                            <i class="bi bi-pencil"></i>
                         </a>
                     </td>
                 </tr>
@@ -38,11 +39,13 @@
         {% if is_paginated %}
         <nav aria-label="Page navigation">
             <ul class="pagination">
-                {% if page_obj.has_previous %}
+                
                 <li class="page-item">
-                    <a class="page-link" href="?page={{ page_obj.previous_page_number }}">Anterior</a>
+                    <a class="page-link" href="{% if page_obj.has_previous %}?page={{ page_obj.previous_page_number }} {% endif %}">
+                        <span aria-hidden="true">&laquo;</span>
+                    </a>
                 </li>
-                {% endif %}
+                
 
                 {% for num in page_obj.paginator.page_range %}
                 <li class="page-item {% if page_obj.number == num %}active{% endif %}">
@@ -50,11 +53,12 @@
                 </li>
                 {% endfor %}
 
-                {% if page_obj.has_next %}
                 <li class="page-item">
-                    <a class="page-link" href="?page={{ page_obj.next_page_number }}">Siguiente</a>
+                    <a class="page-link" href="{% if page_obj.has_next %} ?page={{ page_obj.next_page_number }} {% endif %}" aria-label="Next">
+                        <span aria-hidden="true">&raquo;</span>
+                    </a>
                 </li>
-                {% endif %}
+                
             </ul>
         </nav>
         {% endif %}
