--- a/core/templates/cliente/cliente_list.html
+++ b/core/templates/cliente/cliente_list.html
@@ -6,6 +6,7 @@
 <div class="main-content">
   <!-- Botón Agregar reparación -->
   <div class="header-icons">
+    <h2 class="titulo">CLIENTE</h2>
     <a href="{% url 'cliente_create' %}" class="btn btn-add me-3"> Agregar Cliente</a>
   </div>
 
@@ -21,7 +22,7 @@
           <th>Nombre</th>
           <th>Apellido</th>
           <th>Teléfono</th>
-          <th>Acciones</th>
+          <th></th>
         </tr>
       </thead>
       <tbody>
