--- a/core/templates/usuario/usuario_list.html
+++ b/core/templates/usuario/usuario_list.html
@@ -6,6 +6,7 @@
 <div class="main-content">
   <!-- Botón Agregar reparación -->
   <div class="header-icons">
+    <h2 class="titulo">USUARIOS</h2>
     <a href="{% url 'usuario_create' %}" class="btn btn-add me-3s"> Agregar Usuario</a>
   </div>
 
