--- a/core/templates/cliente/cliente_list.html
+++ b/core/templates/cliente/cliente_list.html
@@ -33,7 +33,7 @@
           <td>{{ cliente.telefono }}</td>
           <td>
             <a href="{% url 'cliente_editar' nombre=cliente.nombre apellido=cliente.apellido telefono=cliente.telefono  %}" class="btn btn-sm btn-outline-primary" title="Editar cliente">
-              <i class="bi bi-pencil-square"></i>
+              <i class="bi bi-pencil"></i>
             </a>
           </td>
         </tr>
