--- a/core/templates/usuario/usuario_list.html
+++ b/core/templates/usuario/usuario_list.html
@@ -27,7 +27,7 @@
           <td>{{ usuario.username }}</td>
           <td>
             <a href="" class="btn btn-sm btn-outline-primary" title="Editar usuario">
-              <i class="bi bi-pencil-square"></i>
+              <i class="bi bi-pencil"></i>
             </a>
           </td>
         </tr>
