Se acomodaron las tablas de cliente y usuario
* clone del proyecto

* Plantilla base para el dashboard

* Se comprobó que cambiara la base según el usuario que se encuentre activo

* acomode frontend de cliente

* Se modificó agregar cliente y se implementó bootstrap

* Finalizado la base.html y el agregar cliente

* botones

* comprobaciones

* cambios en la sidebar

* ventana emergente de cliente

* ventana emergente corregida

* acomodar reloj

* formulario de agregar usuario

* formulario de usuario

* agregar usuario completado con mensajes resaltados en rojo

* Creacion de HU de egreso en usuario 

* creacion de HU de egreso terminada

* Merge Migrate

* mejora de pruebas de views de egreso

* Otra prueba de test en egreso

* Test de egreso mejorados

* Tests arreglados

* Merge migrations

---------

Co-authored-by: David Santiago Cordoba Perdomo <cordoba.david@correounivalle.edu.co>

* errores remarcan en rojo el input de formulario cliente

* tabla de usuarios (no terminada)

* se quedó un }

* migraciones

* se acomodaron los css

* test y service de usuario

* eliminar archivo db

* eliminar .coverage

* xd

* eliminar ahora sí .coverage

* borrar todo egresos

* eliminar egreso (completo)

* test de usuario mas completos

* Tests de usuario

* tablas

* comit para pasar

* ya quedo

* lapiz mejorado

* probando

* cambio en el test reparacion

---------

Co-authored-by: crisgit24 <cristian.camilo.franco@correounivalle.edu.co>
Co-authored-by: David Santiago Cordoba Perdomo <cordoba.david@correounivalle.edu.co>

--- a/core/templates/cliente/cliente_list.html
+++ b/core/templates/cliente/cliente_list.html
@@ -6,6 +6,7 @@
 <div class="main-content">
   <!-- Botón Agregar reparación -->
   <div class="header-icons">
+    <h2 class="titulo">CLIENTE</h2>
     <a href="{% url 'cliente_create' %}" class="btn btn-add me-3"> Agregar Cliente</a>
   </div>
 
@@ -21,7 +22,7 @@
           <th>Nombre</th>
           <th>Apellido</th>
           <th>Teléfono</th>
-          <th>Acciones</th>
+          <th></th>
         </tr>
       </thead>
       <tbody>
@@ -32,7 +33,7 @@
           <td>{{ cliente.telefono }}</td>
           <td>
             <a href="{% url 'cliente_editar' nombre=cliente.nombre apellido=cliente.apellido telefono=cliente.telefono  %}" class="btn btn-sm btn-outline-primary" title="Editar cliente">
-              <i class="bi bi-pencil-square"></i>
+              <i class="bi bi-pencil"></i>
             </a>
           </td>
         </tr>
@@ -76,27 +77,26 @@
   <!-- Paginación -->
   {% if is_paginated %}
   <nav aria-label="Page navigation">
-    <ul class="pagination">
-      {% if page_obj.has_previous %}
-      <li class="page-item">
-        <a class="page-link" href="?page={{ page_obj.previous_page_number }}">Anterior</a>
-      </li>
-      {% endif %}
+      <ul class="pagination">
+          <li class="page-item">
+              <a class="page-link" href="{% if page_obj.has_previous %}?page={{ page_obj.previous_page_number }} {% endif %}">
+                  <span aria-hidden="true">&laquo;</span>
+              </a>
+          </li>
 
-      {% for num in page_obj.paginator.page_range %}
-      <li class="page-item {% if page_obj.number == num %}active{% endif %}">
-        <a class="page-link" href="?page={{ num }}">{{ num }}</a>
-      </li>
-      {% endfor %}
+          {% for num in page_obj.paginator.page_range %}
+          <li class="page-item {% if page_obj.number == num %}active{% endif %}">
+              <a class="page-link" href="?page={{ num }}">{{ num }}</a>
+          </li>
+          {% endfor %}
 
-      {% if page_obj.has_next %}
-      <li class="page-item">
-        <a class="page-link" href="?page={{ page_obj.next_page_number }}">Siguiente</a>
-      </li>
-      {% endif %}
-    </ul>
+          <li class="page-item">
+              <a class="page-link" href="{% if page_obj.has_next %} ?page={{ page_obj.next_page_number }} {% endif %}" aria-label="Next">
+                  <span aria-hidden="true">&raquo;</span>
+              </a>
+          </li>
+      </ul>
   </nav>
   {% endif %}
-</div>
 </div>
 {% endblock %}
