--- a/core/templates/usuario/usuario_list.html
+++ b/core/templates/usuario/usuario_list.html
@@ -6,6 +6,7 @@
 <div class="main-content">
   <!-- Botón Agregar reparación -->
   <div class="header-icons">
+    <h2 class="titulo">USUARIOS</h2>
     <a href="{% url 'usuario_create' %}" class="btn btn-add me-3s"> Agregar Usuario</a>
   </div>
 
@@ -26,7 +27,7 @@
           <td>{{ usuario.username }}</td>
           <td>
             <a href="" class="btn btn-sm btn-outline-primary" title="Editar usuario">
-              <i class="bi bi-pencil-square"></i>
+              <i class="bi bi-pencil"></i>
             </a>
           </td>
         </tr>
@@ -61,28 +62,31 @@
 
     <!-- Paginación -->
     {% if is_paginated %}
-    <nav aria-label="Page navigation">
-      <ul class="pagination">
-        {% if page_obj.has_previous %}
-        <li class="page-item">
-          <a class="page-link" href="?page={{ page_obj.previous_page_number }}">Anterior</a>
-        </li>
-        {% endif %}
+        <nav aria-label="Page navigation">
+            <ul class="pagination">
+                
+                <li class="page-item">
+                    <a class="page-link" href="{% if page_obj.has_previous %}?page={{ page_obj.previous_page_number }} {% endif %}">
+                        <span aria-hidden="true">&laquo;</span>
+                    </a>
+                </li>
+                
 
-        {% for num in page_obj.paginator.page_range %}
-        <li class="page-item {% if page_obj.number == num %}active{% endif %}">
-          <a class="page-link" href="?page={{ num }}">{{ num }}</a>
-        </li>
-        {% endfor %}
+                {% for num in page_obj.paginator.page_range %}
+                <li class="page-item {% if page_obj.number == num %}active{% endif %}">
+                    <a class="page-link" href="?page={{ num }}">{{ num }}</a>
+                </li>
+                {% endfor %}
 
-        {% if page_obj.has_next %}
-        <li class="page-item">
-          <a class="page-link" href="?page={{ page_obj.next_page_number }}">Siguiente</a>
-        </li>
+                <li class="page-item">
+                    <a class="page-link" href="{% if page_obj.has_next %} ?page={{ page_obj.next_page_number }} {% endif %}" aria-label="Next">
+                        <span aria-hidden="true">&raquo;</span>
+                    </a>
+                </li>
+                
+            </ul>
+        </nav>
         {% endif %}
-      </ul>
-    </nav>
-    {% endif %}
   </div>
 </div>
 {% endblock %}
