--- a/core/static/css/formularios.css
+++ b/core/static/css/formularios.css
@@ -39,7 +39,6 @@ form {
 .form-span {
   border: 1px solid #626E15; 
   border-radius: 4px;
-  background-color: #D4E484;
 }
 
 .form-buttons {
@@ -236,11 +235,10 @@ table {
 }
 
 .search-form .form-control {
-  height: 100%;
-  border-right: none;
   border: 2px solid #626E15;
   font-family: "Montserrat", sans-serif;
   font-weight: bold;
+  border-radius: 4px !important; 
 }
 
 .search-form .btn-search {
@@ -248,6 +246,7 @@ table {
   border-left: none;
   background-color: white;
   border: 2px solid #626E15;
+  border-radius: 4px !important; 
 }
 
 div.error-message {
