--- a/core/static/css/reparacion.css
+++ b/core/static/css/reparacion.css
@@ -155,8 +155,6 @@ select.form-span {
 .form-reparacion {
   display: flex;
   flex-direction: column;
-  gap: 15px;
-  width: 100%;
   max-width: 1000px;
 }
 
@@ -169,4 +167,8 @@ select.form-span {
   border-radius: 4px;
   width: 100%;
   box-sizing: border-box;
+}
+
+.select2-selection.is-invalid {
+  border: 1px solid #dc3545 !important; /* rojo de Bootstrap */
 }
