--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -1,4 +1,4 @@
-{% load static %}
+{% load static %} 
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -138,7 +138,7 @@
             </a>
           </li>
           <li class="{% if '/egreso/' in request.path or request.path == '/egreso' %} active {% endif %}">
-            <a href="#" class="{% if not '/egreso/' in request.path or request.path == '/egreso' %} menu-link {% endif %}">
+            <a href="{% url 'egreso' %}" class="{% if not '/egreso/' in request.path or request.path == '/egreso' %} menu-link {% endif %}">
               <span>
                 <img src="{% static 'images/reportes.png' %}" alt="Egresos" class="icon">
               </span>
@@ -160,6 +160,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   {% block extra_js %}
+  {% endblock %}
+  {% block javascript %}
   {% endblock %}
 </body>
 </html>
