--- a/core/templates/egreso/egreso_form.html
+++ b/core/templates/egreso/egreso_form.html
@@ -48,7 +48,7 @@
         {% csrf_token %}
 
         <div class="mb-3">
-            <div class="input-group custom-form">
+            <div class="input-group egreso-form custom-form">
                 <span class="input-group-text form-span" id="basic-addon1">
                     <i class="bi bi-currency-dollar fs-4 text-secondary"></i>
                 </span>
@@ -64,7 +64,7 @@
         </div>
 
         <div class="mb-3">
-            <div class="input-group custom-form">
+            <div class="input-group egreso-form custom-form">
                 <span class="input-group-text form-span" id="basic-addon1">
                     <i class="bi bi-calendar-date fs-4 text-secondary"></i>
                 </span>
@@ -80,7 +80,7 @@
         </div>
 
         <div class="mb-3">
-            <div class="input-group custom-form">
+            <div class="input-group egreso-form custom-form">
                 <span class="input-group-text form-span" id="basic-addon1">
                     <i class="bi bi-pencil-square fs-4 text-secondary"></i>     
                 </span>
