--- a/core/templates/usuario/usuario_form.html
+++ b/core/templates/usuario/usuario_form.html
@@ -4,7 +4,13 @@
 {% block title %}Agregar Usuario{% endblock %}
 
 {% block content %}
-<h2 class="titulo">AGREGAR USUARIO</h2>
+<h2 class="titulo">
+    {% if modo == 'editar' %}
+        EDITAR USUARIO
+    {% else %}
+        AGREGAR USUARIO
+    {% endif %}
+</h2>
 <h4>DATOS</h4>
 
 <div>
@@ -44,7 +50,7 @@
             <div class="form-error">{{ form.email.errors.0 }}</div>
         {% endif %}
     </div>
-
+    {% if not modo == 'editar'  %}
     <div class="form-group">
         <div class="input-group mb-3">
             <span class="input-group-text form-span" id="basic-addon1">
@@ -78,6 +84,7 @@
         <div class="form-error">{{ form.password2.errors.0 }}</div>
         {% endif %}
     </div>
+    {% endif %}
 
     {% if form.non_field_errors %}
         {% for error in form.non_field_errors %}
@@ -92,6 +99,13 @@
         </a>
     </div>
     </form>
+    {% if messages %}
+        <ul class="messages">
+            {% for message in messages %}
+            <li class="{{ message.tags }}">{{ message }}</li>
+            {% endfor %}
+        </ul>
+    {% endif %}
 </div>
 
 <div class="right-column">
@@ -281,7 +295,7 @@
     }
 
     const password2Toggle = document.createElement('i');
-    password2Toggle.className = 'toggle-password bi bi-eye';
+    password2Toggle.className = 'toggle-password bi-eye';
     password2Toggle.id = 'togglePassword2';
     password2Field.parentElement.appendChild(password2Toggle);
 
