--- a/core/static/css/ventana.css
+++ b/core/static/css/ventana.css
@@ -5,10 +5,6 @@
     margin: auto;
     width: 100%;
     max-width: 800px;
-    height: 250px;
-    justify-content: center;
-    align-items: center;
-
 }
 
 .modal-header {
@@ -18,6 +14,7 @@
     height: 50%;
     border-bottom: none;
     padding-top: 80px;
+    text-align: center;
 }
 
 .modal-title {
@@ -28,6 +25,7 @@
     padding: 10px;
     justify-content: center;
     align-items: center;
+    text-align: center;
 }
 .btn-cerrar {
     background-color: #D4E484;
@@ -56,4 +54,63 @@
     font-size: 16px;
     align-items: center;
     justify-content: center;;
+}
+
+.custom-delete-modal .modal-header {
+    border-bottom: none;
+    text-align: center;
+    justify-content: center;
+}
+
+.custom-delete-modal .modal-body{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.custom-delete-modal .modal-title {
+    font-size: 28px;
+    font-weight: 800;
+    font-family: 'Montserrat', sans-serif;
+}
+
+.custom-delete-modal .modal-body p {
+    margin: 5px 0;
+    font-family: "Montserrat", sans-serif;
+    font-size: 18px;
+    font-weight: 600;
+    color: #333;
+}
+
+.custom-delete-modal .modal-footer .btn {
+    width: 100px;
+    height: 40px;
+    font-weight: bold;
+    border-radius: 5px;
+    
+}
+
+#confirmDeleteModal .modal-dialog {
+    max-width: 800px; 
+    margin: auto;
+}
+  
+.custom-delete-modal::before,
+.custom-delete-modal::after {
+    display: none !important;
+}
+
+#confirmModal .modal-content{
+    height: 250px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+#confirmDeleteModal .modal-content{
+    height: auto;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
