Eliminar y editar usuario implementados
* clone del proyecto

* Plantilla base para el dashboard

* Se comprobó que cambiara la base según el usuario que se encuentre activo

* acomode frontend de cliente

* Se modificó agregar cliente y se implementó bootstrap

* Finalizado la base.html y el agregar cliente

* botones

* comprobaciones

* cambios en la sidebar

* ventana emergente de cliente

* ventana emergente corregida

* acomodar reloj

* formulario de agregar usuario

* formulario de usuario

* agregar usuario completado con mensajes resaltados en rojo

* Creacion de HU de egreso en usuario 

* creacion de HU de egreso terminada

* Merge Migrate

* mejora de pruebas de views de egreso

* Otra prueba de test en egreso

* Test de egreso mejorados

* Tests arreglados

* Merge migrations

---------

Co-authored-by: David Santiago Cordoba Perdomo <cordoba.david@correounivalle.edu.co>

* errores remarcan en rojo el input de formulario cliente

* tabla de usuarios (no terminada)

* se quedó un }

* migraciones

* se acomodaron los css

* test y service de usuario

* eliminar archivo db

* eliminar .coverage

* xd

* eliminar ahora sí .coverage

* borrar todo egresos

* eliminar egreso (completo)

* test de usuario mas completos

* Tests de usuario

* tablas

* comit para pasar

* ya quedo

* lapiz mejorado

* probando

* cambio en el test reparacion

* eliminar y editar usuario

* overflow

---------

Co-authored-by: crisgit24 <cristian.camilo.franco@correounivalle.edu.co>
Co-authored-by: David Santiago Cordoba Perdomo <cordoba.david@correounivalle.edu.co>

--- a/core/static/css/formularios.css
+++ b/core/static/css/formularios.css
@@ -6,9 +6,9 @@
     position: relative;
     align-items: flex-start; 
     min-height: 500px;
-    overflow-x: auto;
     min-width: 0;
     max-width: 100%;
+    overflow: hidden;
 }
 
 form {
