Todo empleados implementado

--- a/core/templates/reparacion/reparacion_list.html
+++ b/core/templates/reparacion/reparacion_list.html
@@ -46,8 +46,7 @@
                     <td>${{ reparacion.precio }}</td>
                     <td>{{ reparacion.fecha_ingreso|date:"d/m/Y" }}</td>
                     <td>{{ reparacion.estado }}</td>
-                    <td>{{ reparacion.cliente.nombre }} {{ reparacion.cliente.apellido }} - {{
-                        reparacion.cliente.telefono }}</td>
+                    <td>{{ reparacion.cliente.nombre }} {{ reparacion.cliente.apellido }} - {{ reparacion.cliente.telefono }}</td>
                     <td>{{ reparacion.descripcion }}</td>
                     <td> {{ reparacion.fecha_entrega_estimada|date:'d/m/Y' }} </td>
                     <td>{{ reparacion.espacio_fisico }}</td>
