--- a/core/templates/reparacion/reparacion_form.html
+++ b/core/templates/reparacion/reparacion_form.html
@@ -67,7 +67,7 @@
                     </div>
 
 
-                    <div class="input-group reparacion-custom-form mt-3">
+                    <div class="input-group mt-3">
                         <span class="input-group-text form-span" id="basic-addon2">
                             <i class="bi bi-pencil-square fs-4 text-secondary"></i>
                         </span>
@@ -232,6 +232,8 @@
             '</div>');
     }
 </script>
+
+<script src="https://cdn.jsdelivr.net/npm/flatpickr/dist/l10n/es.js"></script>
 
 <script>
     flatpickr("#id_fecha_entrega_estimada", {
