Implementación de Empleado completo y Reparación
* Agrego archivo de dependencias (CI)

* Añadir configuración CI/CD de GitHub Actions

* Corregir configuración de GitHub Actions

* Correccción de archivo de CI

* Modificación archivo de CI

* Cambio de version de python en CI

* Actualización de frontend para el Form y el List

* "revert frontend para el Form y el List"

This reverts commit 943eb74c25a29b6086406b787c9f26ea7c8342ed.

* Frontend de Cliente actualizado

* Ignorar db.sqlite3 desde ahora

* Listo para despliegue

* Todo listo para despliegue

* Listo para despliegue definitivo

* Frontend de Cliente par despliegue

* Corrección de lista de clientes

* Cambios para AWS

* Update settings.py para aws

* Cambios para AWS

* Cambios para AWS

* Cambios para AWS

* Cambios para AWS

* Cambios para AWS

* Cambios para AWS

* Cambios para AWS

* Cambios para AWS

* Cambios para AWS

* Cambios para CD

* Cambios para CD

* Cambios para CD

* Cambios para CD

* Cambios para CD

* Cambios para CD

* Cambios para CD

* Correción de errores en settings.py

* Commit prueba sara

* cambio en settings.py

* Listo para despliegue en AWS

* Update deploy.yml

* Update settings.py

* commit sara

* Implementación de modelo Reparación y Sonar (Falta Empleado)

* Cambios en .gitignore

* Cambios en Sonar

* Cambios en Sonar

* Merge

* update ci

* Creación de sonar properties

* Creación de Modelo Empleado completo

* Test de Reparación completo

* Arreglo de test en Empleado

* Test de Empleados cubiertos

* Protección de solicitudes HTTP

* Test dde Servicios de Empleado implementados

* Test de servicios de Empleado implementados

* Test de EmpleadoView implementados

* Cambios en Test Empleado View

* Implementación parcial de test de Reparación

* Test de servicios de Reparación listos

* Implementación de Reparación completa

* Correciones

* Migraciones de DB

* Implementacion de security

* falso positivo

* Falso positivo

* Test de reparación view implementados


--- a/core/templates/reparacion/reparacion_form.html
+++ b/core/templates/reparacion/reparacion_form.html
@@ -233,6 +233,8 @@
     }
 </script>
 
+<script src="https://cdn.jsdelivr.net/npm/flatpickr/dist/l10n/es.js"></script>
+
 <script>
     flatpickr("#id_fecha_entrega_estimada", {
         dateFormat: "d/m/Y", // formato deseado
