--- a/core/templates/cliente/cliente_list.html
+++ b/core/templates/cliente/cliente_list.html
@@ -31,7 +31,7 @@
           <td>{{ cliente.apellido }}</td>
           <td>{{ cliente.telefono }}</td>
           <td>
-            <a href="{% url 'cliente_editar' nombre=cliente.nombre apellido=cliente.apellido telefono=cliente.telefono  %}" class="btn btn-sm btn-outline-primary" title="Editar cliente">
+            <a href="{% url 'cliente_editar' id=cliente.id %}" class="btn btn-sm btn-outline-primary" title="Editar cliente">
               <i class="bi bi-pencil-square"></i>
             </a>
           </td>
